--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build system
       run: |
         apt update -y
-        apt-get install -y live-build squashfs-tools syslinux-common xorriso isolinux git curl
+        apt-get install -y live-build u-boot squashfs-tools syslinux-common xorriso isolinux git curl
         git clone https://github.com/Blade-OS/os.git -b gloomy
         cd os/
         ./build_arm
