--- a/.github/workflows/build_amd64.yml
+++ b/.github/workflows/build_amd64.yml
@@ -29,6 +29,7 @@ jobs:
         git clone https://github.com/Blade-OS/os.git -b gloomy
         cd os/
         ./build
+        find . -type f -not -name '*.iso'-delete
         mv blade/blade-"$(date -u +%y%m%d)"-amd64.hybrid.iso ~/blade.iso
         cd ../
 
